--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 		<li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
 			<span itemprop="name">وبلاگ</span>
 			<meta itemprop="position" content="2" />
-			<meta itemprop="item" content="{{ site.baseurl }}/blog"/>
+			<meta itemprop="item" content="{{ site.url }}/blog"/>
 		  </li>
 	  </ul>
 	  {%- endif -%}
