--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -74,7 +74,7 @@ layout: default
     <label class="form-label">ایمیل</label>
     <input type="email" required="required" name="fields[email]" placeholder="ایمیل شما" oninput="document.getElementById('hidden-mail').value = this.value.replace('@', '')">
     <label class="form-label">متن نظر</label>
-    <textarea rows="4" required="required" name="fields[msg]"></textarea>
+    <textarea rows="4" required="required" name="fields[msg]" placeholder="دیدگاه خود را اینجا بنویسید"></textarea>
     <input type="submit" value="ارسال نظر" />
    </form>
   </div>
