--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{%- if page.title -%}{{ page.title }} – {%- endif -%}{{ site.name }} – {{ site.description }}</title>
+    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}</title>
     {%- include meta.html -%}
 	<link rel="icon" href="{{ site.baseurl }}/images/favicon.png" />
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.baseurl }}/feed.xml" />
     {%- seo -%}
   </head>
   <body>
@@ -17,7 +17,6 @@
         <header class="masthead clearfix">
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/" rel="home">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
           </div>
           <nav>
             <a href="{{ site.baseurl }}/blog" rel="bookmark" title="نوشته‌های مرتضی اسدی">وبلاگ</a>
