--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     {%- seo -%}
   </head>
   <body>
+   <div id="wrapper">
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
@@ -87,6 +88,7 @@
         </footer>
       </div>
     </div>
+   </div>
     {%- include analytics.html -%}
   </body>
 </html>
